feat: adopt Java 25 and modernize runtime and tooling