@@ -74,7 +74,7 @@ record CliOptions(String scenario, Map<String, List<String>> options, List<Strin
 
     String string(String name, String defaultValue) {
         List<String> values = values(name);
-        return values.isEmpty() ? defaultValue : values.get(values.size() - 1);
+        return values.isEmpty() ? defaultValue : values.getLast();
     }
 
     int integer(String name, int defaultValue) {
@@ -99,11 +99,11 @@ record CliOptions(String scenario, Map<String, List<String>> options, List<Strin
         if (values.isEmpty()) {
             return defaultValue;
         }
-        String raw = values.get(values.size() - 1).toLowerCase(Locale.ROOT);
+        String raw = values.getLast().toLowerCase(Locale.ROOT);
         return switch (raw) {
             case "true", "1", "yes", "on" -> true;
             case "false", "0", "no", "off" -> false;
-            default -> throw new IllegalArgumentException(name + " must be boolean: " + values.get(values.size() - 1));
+            default -> throw new IllegalArgumentException(name + " must be boolean: " + values.getLast());
         };
     }
 
